[gd_scene load_steps=4 format=3 uid="uid://dmqprh7knso0q"]

[ext_resource type="PackedScene" uid="uid://d0mq0a785re76" path="res://scenes/slot.tscn" id="1_8wgj1"]
[ext_resource type="Script" uid="uid://iuo44t75e5c4" path="res://scripts/chest_ui.gd" id="1_kenpi"]
[ext_resource type="PackedScene" uid="uid://d3igyixqayxt6" path="res://scenes/tool_tip.tscn" id="3_0bdxf"]

[node name="ChestUI" type="CanvasLayer"]
script = ExtResource("1_kenpi")

[node name="Style" type="Node" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Style"]
color = Color(0.0980392, 0.0980392, 0.0980392, 0.478431)
polygon = PackedVector2Array(-24, -26, 1168, -28, 1167, 665, -22, 672)
uv = PackedVector2Array(-1, -1, 1153, 1, 1155, 648, 0, 651)

[node name="Slot" parent="." instance=ExtResource("1_8wgj1")]
position = Vector2(276, 300)

[node name="Slot2" parent="." instance=ExtResource("1_8wgj1")]
position = Vector2(376, 300)

[node name="Slot3" parent="." instance=ExtResource("1_8wgj1")]
position = Vector2(476, 300)

[node name="Slot4" parent="." instance=ExtResource("1_8wgj1")]
position = Vector2(576, 300)

[node name="Slot5" parent="." instance=ExtResource("1_8wgj1")]
position = Vector2(676, 300)

[node name="Slot6" parent="." instance=ExtResource("1_8wgj1")]
position = Vector2(776, 300)

[node name="Slot7" parent="." instance=ExtResource("1_8wgj1")]
position = Vector2(876, 300)

[node name="ChestSlotToolTip" parent="." instance=ExtResource("3_0bdxf")]
visible = false
text = "to take full stack"
key_path = "res://assets/images/mouse.png"
index = 1
side = 1

[node name="ChestSlotToolTip2" parent="." instance=ExtResource("3_0bdxf")]
visible = false
text = "to take 1"
key_path = "res://assets/images/mouse.png"

[node name="HotbarToolTip" parent="." instance=ExtResource("3_0bdxf")]
visible = false
text = "to store full stack"
key_path = "res://assets/images/mouse.png"
index = 1
side = 1

[node name="HotbarToolTip2" parent="." instance=ExtResource("3_0bdxf")]
visible = false
text = "to store 1"
key_path = "res://assets/images/mouse.png"

[node name="ExitToolTip" parent="." instance=ExtResource("3_0bdxf")]
text = "to exit"
key_path = "res://assets/images/Keys/E-Key.png"
index = 16

[connection signal="clicked" from="Slot" to="." method="_on_slot_clicked"]
[connection signal="clicked" from="Slot2" to="." method="_on_slot_2_clicked"]
[connection signal="clicked" from="Slot3" to="." method="_on_slot_3_clicked"]
[connection signal="clicked" from="Slot4" to="." method="_on_slot_4_clicked"]
[connection signal="clicked" from="Slot5" to="." method="_on_slot_5_clicked"]
[connection signal="clicked" from="Slot6" to="." method="_on_slot_6_clicked"]
[connection signal="clicked" from="Slot7" to="." method="_on_slot_7_clicked"]
